element set name optional, skio additional search info, add LVI test